packages/babel-cli/test/fixtures/babel/dir --out-dir --watch --verbose with external dependencies/stdout.txt
<ROOTDIR>/packages/babel-core/lib/index.js:229
      throw new Error("BABEL_8_BREAKING is only supported in ESM. Please run `make use-esm`.");
      ^
Error: BABEL_8_BREAKING is only supported in ESM. Please run `make use-esm`.
    at Object.<anonymous> (<ROOTDIR>/packages/babel-core/lib/index.js:229:13)
    at Module._compile (node:internal/modules/cjs/loader:1469:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1548:10)
    at Module.load (node:internal/modules/cjs/loader:1288:32)
    at Module._load (node:internal/modules/cjs/loader:1104:12)
    at Module.require (node:internal/modules/cjs/loader:1311:19)
    at require (node:internal/modules/helpers:179:18)
    at _core (<ROOTDIR>/packages/babel-cli/lib/babel/options.js:22:16)
    at Object.<anonymous> (<ROOTDIR>/packages/babel-cli/lib/babel/options.js:61:127)
    at Module._compile (node:internal/modules/cjs/loader:1469:14)
Node.js v20.17.0
